fix(report): text contrast and consistent yellow traffic light

--- a/popmon/visualization/templates/assets/css/custom-style.css
+++ b/popmon/visualization/templates/assets/css/custom-style.css
@@ -70,7 +70,7 @@ table.overview td.cell-green{
     background: green;
 }
 table.overview td.cell-yellow{
-    background: yellow;
+    background: rgba(255, 200, 0, 1.0);
 }
 table.overview td.cell-red{
     background: red;
@@ -102,7 +102,7 @@ table.overview tfoot td span{
     background-color: green;
 }
 .yellow{
-    background-color: orange;
+    background-color: rgba(255, 200, 0, 1.0);
 }
 .red{
     background-color: red;
